# QEP_Solver_CLI

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  RELEASE_NOTES.txt  config.json  更新说明
.github/workflows/: build.yml
Problems/user/test/: problem.json
examples/: simple_example.cpp
include/config/: BinaryConvertList.h  GlobalConfig.h  TestCases.h
src/cli/: main.cpp
src/qep/core/: UnifiedSolver.cpp
src/qep/utils/: ConfigManager.cpp  CreateProblem.cpp  MatrixProperties.cpp  MatrixProperties.h
src/test/: main.cpp
